# kepler

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.app  Dockerfile.dashboard  Dockerfile.dev  Dockerfile.kite-mcp  docker-compose.dev.yml  docker-compose.yml  findings.md  project_design.md  requirements_dashboard.txt  test_rx.py
swingtradev3/: .env.example  KITE_MCP_SETUP.md  Makefile  README.md  alembic.ini  config.py  config.yaml  health_manager.py  intent_ids.py  llm_bridge.py  logging_config.py  main.py  mcp_client.py  models.py  paths.py  pyproject.toml  regime_adapter.py  requirements.txt  storage.py
swingtradev3/agents/: execution_agent.py  models.py  reconciler.py  research_agent.py  root.py
swingtradev3/api/: main.py  sse_broadcaster.py
swingtradev3/auth/: token_manager.py  totp_login.py
swingtradev3/backtest/: candle_replay.py  data_fetcher.py  engine.py  metrics.py  optimizer.py  walk_forward.py
swingtradev3/broker/: __init__.py  kite_rest.py  kite_stream.py  postbacks.py  reducer.py  types.py
swingtradev3/context/: agent_activity.json  event_log.jsonl  failed_events.json  fundamentals_cache.json  institutional_flows_cache.json  macro_cache.json  news_cache.json  nifty50.json  options_cache.json  pending_approvals.json  regime_cache.json  scan_status.json  sentiment_cache.json  state.json  stats.json  telegram_last_update_id.json  telegram_processed_ids.json  timesfm_cache.json  trades.json
swingtradev3/dashboard/: .gitignore  app.py  rxconfig.py
swingtradev3/data/: corporate_actions.py  earnings_calendar.py  institutional_flows.py  kite_fetcher.py  macro_indicators.py  market_regime.py  news_aggregator.py  (+5 more)
(+1466 files in other folders)
